@@ -1,22 +1,24 @@
 package de.melanx.skyblockbuilder.template;
 
 import de.melanx.skyblockbuilder.SkyblockBuilder;
-import de.melanx.skyblockbuilder.config.common.DimensionsConfig;
 import de.melanx.skyblockbuilder.config.common.TemplatesConfig;
+import de.melanx.skyblockbuilder.config.values.providers.SpawnsProvider;
+import de.melanx.skyblockbuilder.config.values.providers.SpreadsProvider;
+import de.melanx.skyblockbuilder.config.values.providers.SurroundingBlocksProvider;
 import de.melanx.skyblockbuilder.util.SkyPaths;
-import net.minecraft.world.level.levelgen.structure.templatesystem.StructurePlaceSettings;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate;
 
 import javax.annotation.Nullable;
+import java.io.File;
 import java.io.IOException;
 import java.util.*;
 
 public class TemplateLoader {
 
-    public static final StructurePlaceSettings STRUCTURE_PLACE_SETTINGS = new StructurePlaceSettings().setKnownShape(true).setKeepLiquids(false);
     private static final List<String> TEMPLATE_NAMES = new ArrayList<>();
     private static final Map<String, ConfiguredTemplate> TEMPLATE_MAP = new HashMap<>();
     private static ConfiguredTemplate TEMPLATE;
+    private static Optional<Integer> PALETTE_INDEX = Optional.empty();
     private static NetherPortalTemplate NETHER_PORTAL;
 
     public static void updateTemplates() {
@@ -27,20 +29,24 @@ public class TemplateLoader {
             SkyPaths.copyTemplateFile();
             Set<String> takenNames = new HashSet<>();
 
-            for (TemplateInfo info : TemplatesConfig.templates) {
-                if (!TemplatesConfig.spawns.containsKey(info.spawns())) {
-                    throw new IllegalArgumentException("Spawn configuration \"" + info.spawns() + "\" is not defined: " + info.name());
+            for (TemplateInfo info : TemplatesConfig.templateList) {
+                if (info.spawns() instanceof SpawnsProvider.Reference(String name) && !TemplatesConfig.spawnPointReferences.containsKey(name)) {
+                    throw new IllegalArgumentException("Spawns configuration \"" + info.spawns() + "\" is not defined: " + info.name());
                 }
 
-                if (!TemplatesConfig.surroundingBlocks.containsKey(info.surroundingBlocks()) && !info.surroundingBlocks().isEmpty()) {
+                if (info.spawns().templateSpawns().allEmpty()) {
+                    throw new IllegalArgumentException("Spawns configuration \"" + info.spawns() + "\" is empty: " + info.name());
+                }
+
+                if (info.surroundingBlocks() instanceof SurroundingBlocksProvider.Reference(String name) && !TemplatesConfig.surroundingBlockReferences.containsKey(name)) {
                     throw new IllegalArgumentException("Surrounding blocks configuration \"" + info.surroundingBlocks() + "\" is not defined: " + info.name());
                 }
 
-                if (!TemplatesConfig.spreads.containsKey(info.spreads()) && !info.spreads().isEmpty()) {
+                if (info.spreads() instanceof SpreadsProvider.Reference(String name) && !TemplatesConfig.spreadReferences.containsKey(name)) {
                     throw new IllegalArgumentException("Spreads configuration \"" + info.spreads() + "\" is not defined: " + info.name());
                 }
 
-                if (!SkyPaths.TEMPLATES_DIR.resolve(info.file()).toFile().exists()) {
+                if (!SkyPaths.ISLANDS_DIR.resolve(info.file()).toFile().exists()) {
                     throw new IllegalArgumentException("Template file \"" + info.file() + "\" does not exist: " + info.name());
                 }
 
@@ -60,12 +66,14 @@ public class TemplateLoader {
             }
 
             if (TEMPLATE == null) {
-                TEMPLATE = TEMPLATE_MAP.get(TEMPLATE_NAMES.get(0).toLowerCase(Locale.ROOT));
+                TEMPLATE = TEMPLATE_MAP.get(TEMPLATE_NAMES.getFirst().toLowerCase(Locale.ROOT));
             } else {
-                TEMPLATE = TemplateLoader.getConfiguredTemplate(TEMPLATE.getName());
+                TEMPLATE = TemplateLoader.getConfiguredTemplate(TEMPLATE.getName(), false);
             }
 
-            DimensionsConfig.Nether.netherPortalStructure.ifPresent(filePath -> NETHER_PORTAL = new NetherPortalTemplate(filePath));
+            //noinspection DataFlowIssue
+            Optional<File> netherPortalFile = Arrays.stream(SkyPaths.PORTALS_DIR.toFile().listFiles()).filter(SkyPaths.NBT_OR_SNBT).filter(file -> file.getName().startsWith("to_nether")).findFirst();
+            netherPortalFile.ifPresent(file -> NETHER_PORTAL = new NetherPortalTemplate(file));
         } catch (IOException e) {
             throw new RuntimeException("Cannot load templates.", e);
         }
@@ -93,7 +101,12 @@ public class TemplateLoader {
     }
 
     public static void setTemplate(ConfiguredTemplate template) {
+        TemplateLoader.setTemplate(template, Optional.empty());
+    }
+
+    public static void setTemplate(ConfiguredTemplate template, Optional<Integer> paletteIndex) {
         TEMPLATE = template;
+        PALETTE_INDEX = paletteIndex;
     }
 
     public static StructureTemplate getTemplate() {
@@ -106,7 +119,17 @@ public class TemplateLoader {
 
     @Nullable
     public static ConfiguredTemplate getConfiguredTemplate(String name) {
-        return TEMPLATE_MAP.get(name.toLowerCase(Locale.ROOT));
+        return TemplateLoader.getConfiguredTemplate(name, true);
+    }
+
+    @Nullable
+    public static ConfiguredTemplate getConfiguredTemplate(String name, boolean randomPalette) {
+        ConfiguredTemplate configuredTemplate = TEMPLATE_MAP.get(name.toLowerCase(Locale.ROOT));
+        if (!randomPalette && PALETTE_INDEX.isPresent()) {
+            configuredTemplate = configuredTemplate.onlyWithPalette(PALETTE_INDEX.get());
+        }
+
+        return configuredTemplate;
     }
 
     public static ConfiguredTemplate getConfiguredTemplate() {
